src/components/Header/AnimatedHeader.module.scss
$activeIndex: 0;

@keyframes draw-from-above-#{$activeIndex} {
  from {
    transform: translateY(-50px);
    opacity: 0;
  }
  to {
    transform: translateY(0);
    opacity: 1;
  }
}

@for $i from 0 through 10 {
  @keyframes draw-from-above-#{$i} {
    from {
      transform: translateY(-50px);
      opacity: 0;
    }
    to {
      transform: translateY(0);
      opacity: 1;
    }
  }
}

@keyframes fade-out {
  from {
    opacity: 1;
  }
  to {
    opacity: 0;
  }
}

@keyframes draw-from-around-#{$activeIndex} {
  from {
    opacity: 0;
  }
  to {
    transform: translateY(0);
    opacity: 1;
  }
}

.wordStyle {
  font-size: 2.1rem;
}

@media (max-width: 768px) {
  .wordStyle {
    font-size: 1.8rem;
  }
}

@media (max-width: 576px) {
  .wordStyle {
    font-size: 1.5rem;
  }
}

.animation {
  animationname: draw-from-above-#{$activeIndex};
  animation-duration: 1s;
  animation-timing-function: ease-in-out;
}

.wordStyle {
  font-size: 2.1rem;
}

@media (max-width: 768px) {
  .wordStyle {
    font-size: 1.8rem;
  }
}

@media (max-width: 576px) {
  .wordStyle {
    font-size: 1.5rem;
  }
}

.animation {
  animation-duration: 1s;
  animation-timing-function: ease-in-out;
}

.wordStyle {
  font-size: 2.1rem;
  opacity: 0;
  font-family: monospace;
  text-transform: uppercase;
  font-weight: 800;
  transition-property: opacity;
  transition-duration: 0.2s;
  transition-timing-function: ease-in-out;
  transition-delay: 0s;
  position: absolute;
  top: 0%;
  z-index: 888;
}

.animationStyle {
  animationname: fade-out;
  animationduration: 20s;
  animationtimingfunction: ease-in-out;
  animationfillmode: forwards;
}

.activeStyle {
  opacity: 1;
}

.containerStyle {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  position: relative;
  width: 100%;
  margin-top: 10%;
}

.Headstyle {
  position: relative;
  white-space: pre;
  z-index: 888;
}
.letterStyle {
  width: 100%;
}

.firstSvg {
  position: absolute;
  top: 47%;
  left: 75%;
  color: #bbff8e;
  width: 18%;
  zindex: 1;
}

.secondSvg {
  position: absolute;
  top: 30%;
  left: 12%;
  color: #ff0000;
  width: 22%;
  zindex: 1;
}

.thirdSvg {
  position: absolute;
  top: 90%;
  left: 38%;
  color: #bbff8e;
  width: 29%;
  zindex: 1;
}

.fourthSvg {
  position: absolute;
  top: 78%;
  left: 12%;
  transform: rotate(270deg);
  color: #bbff8e;
  width: 8%;
  zindex: 1;
}

.fifthSvg {
  position: absolute;
  top: 30%;
  left: 0%;
  color: #ff0000;
  width: 22%;
  zindex: 1;
}

.sixthSvg {
  position: absolute;
  top: 75%;
  left: 12%;
  color: #9ee46f;
  width: 8%;
  zindex: 1;
}

.seventhSvg {
  position: absolute;
  top: 90%;
  left: 70%;
  color: #9ee46f;
  width: 29%;
  zindex: 1;
}

.eightSvg {
  position: absolute;
  top: 48%;
  left: 45%;
  color: #ff0000;
  width: 20%;
  zindex: 999;
}

.ninthSvg {
  position: absolute;
  bottom: 20%;
  right: 55%;
  color: #9ee46f;
  transform: rotate(270deg);
  width: 8%;
  zindex: 999;
}

.tenthSvg {
  position: absolute;
  bottom: 20%;
  right: 53%;
  color: #9ee46f;
  transform: rotate(270deg);
  width: 9%;
  zindex: 888;
}

.eleventhSvg {
  position: absolute;
  bottom: 20%;
  right: 50%;
  color: #9ee46f;
  transform: rotate(270deg);
  width: 12%;
  zindex: 888;
}

.twelvethSvg {
  position: absolute;
  bottom: 9%;
  right: 60%;
  color: #9ee46f;
  width: 29%;
  zindex: 888;
}

.thirteenthSvg {
  position: absolute;
  top: 10%;
  left: 0%;
  color: #ff0000;
  width: 50%;
  zindex: 1;
}

.fourteenthSvg {
  position: absolute;
  bottom: 6%;
  left: 4%;
  color: #9ee46f;
  width: 98%;
  zindex: 1;
}

@media (max-width: 1000px) {
  .wordStyle {
    font-size: 1.7rem;
  }
  .firstSvg {
    width: 19%;
  }
  .secondSvg {
    width: 22%;
  }
  .thirdSvg {
    width: 31%;
  }
  .fourthSvg {
    width: 9%;
  }
  .fifthSvg {
    width: 22%;
  }
  .sixthSvg {
    width: 8%;
  }
  .seventhSvg {
    width: 31%;
  }
  .eightSvg {
    width: 22%;
  }
  .ninthSvg {
    width: 9%;
  }
  .tenthSvg {
    width: 10%;
  }
  .eleventhSvg {
    width: 13%;
  }
  .twelvethSvg {
    width: 30%;
  }
  .thirteenthSvg {
    width: 50%;
  }
  .fourteenthSvg {
    width: 100%;
  }
}

@media (max-width: 800px) {
  .wordStyle {
    font-size: 1.2rem;
  }
  .firstSvg {
    width: 18%;
  }
  .secondSvg {
    width: 22%;
  }
  .thirdSvg {
    width: 31%;
  }
  .fourthSvg {
    width: 9%;
  }
  .fifthSvg {
    width: 22%;
  }
  .sixthSvg {
    width: 8%;
  }
  .seventhSvg {
    width: 31%;
  }
  .eightSvg {
    width: 22%;
  }
  .ninthSvg {
    width: 9%;
    right: 55%;
  }
  .tenthSvg {
    width: 10%;
    right: 52%;
  }
  .eleventhSvg {
    width: 13%;
    right: 48%;
  }
  .twelvethSvg {
    width: 30%;
  }
  .thirteenthSvg {
    width: 50%;
  }
  .fourteenthSvg {
    width: 100%;
  }
}
@media (max-width: 600px) {
  .wordStyle {
    font-size: 0.9rem;
  }
  .containerStyle {
    margin-top: 20%;
  }
  .firstSvg {
    width: 18%;
  }
  .secondSvg {
    width: 22%;
  }
  .thirdSvg {
    width: 31%;
  }
  .fourthSvg {
    width:  9%;
  }
  .fifthSvg {
    width: 22%;
  }
  .sixthSvg {
    width: 8%;
  }
  .seventhSvg {
    width: 31%;
  }
  .eightSvg {
    width: 22%;
  }
  .ninthSvg {
    width: 9%;
    right: 54%;
  }
  .tenthSvg {
    width: 10%;
    right: 51%;
  }
  .eleventhSvg {
    width: 13%;
    right: 47%;
  }
  .twelvethSvg {
    width: 30%;
  }

  .thirteenthSvg {
    width: 50%;
  }
  .fourteenthSvg {
    width: 100%;
  }
}

